tests/pure_component/pure_component.exp
Error: test.js:4
  4: (<C />); // error (`x` is a required prop)
      ^^^^^ props of React element `C`. This type is incompatible with
  3: class C extends React.PureComponent<{ x: number }> {}
                                         ^^^^^^^^^^^^^ object type
  Property `x` is incompatible:
      3: class C extends React.PureComponent<{ x: number }> {}
                                             ^^^^^^^^^^^^^ property `x`. Property not found in
      4: (<C />); // error (`x` is a required prop)
          ^^^^^ props of React element `C`


Found 1 error
